More tracking of usages